compiler/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.6 from src/Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_prog -> Prog                                (0)
	Prog -> ImportDecl AtomsDecl Expr                  (1)
	ImportDecl -> import VAR ImportDecl                (2)
	ImportDecl -> import qualified VAR ImportDecl      (3)
	ImportDecl ->                                      (4)
	AtomsDecl -> datatype Atoms '=' VAR AtomsList      (5)
	AtomsDecl ->                                       (6)
	AtomsList ->                                       (7)
	AtomsList -> '|' VAR AtomsList                     (8)
	Expr -> Form                                       (9)
	Expr -> let pini Expr Decs in Expr end             (10)
	Expr -> let Decs in Expr end                       (11)
	Expr -> if Expr then Expr else Expr                (12)
	Expr -> fn Pattern '=>' Expr                       (13)
	Expr -> hn Pattern '=>' Expr                       (14)
	Expr -> hn Pattern '|' Pattern '=>' Expr           (15)
	Expr -> hn Pattern when Expr '=>' Expr             (16)
	Expr -> hn Pattern '|' Pattern when Expr '=>' Expr   (17)
	Expr -> case Expr of Match                         (18)
	Expr -> Expr ';' Expr                              (19)
	Expr -> Expr '-' Expr                              (20)
	Expr -> Expr '+' Expr                              (21)
	Expr -> Expr '>=' Expr                             (22)
	Expr -> Expr '*' Expr                              (23)
	Expr -> Expr '/' Expr                              (24)
	Expr -> Expr div Expr                              (25)
	Expr -> Expr mod Expr                              (26)
	Expr -> Expr '^' Expr                              (27)
	Expr -> Expr '=' Expr                              (28)
	Expr -> Expr '<=' Expr                             (29)
	Expr -> Expr '<' Expr                              (30)
	Expr -> Expr '>' Expr                              (31)
	Expr -> Expr '<>' Expr                             (32)
	Expr -> Expr andalso Expr                          (33)
	Expr -> Expr orelse Expr                           (34)
	Expr -> Expr andb Expr                             (35)
	Expr -> Expr orb Expr                              (36)
	Expr -> Expr xorb Expr                             (37)
	Expr -> Expr '<<' Expr                             (38)
	Expr -> Expr '>>' Expr                             (39)
	Expr -> Expr '~>>' Expr                            (40)
	Expr -> Expr '::' Expr                             (41)
	Expr -> Expr 'raisedTo' Expr                       (42)
	Expr -> 'isTuple' Expr                             (43)
	Expr -> 'isList' Expr                              (44)
	Expr -> 'isRecord' Expr                            (45)
	Match -> Pattern '=>' Expr                         (46)
	Match -> Pattern '=>' Expr '|' Match               (47)
	Form -> '-' Form                                   (48)
	Form -> Fact                                       (49)
	Fact -> Fact Atom                                  (50)
	Fact -> Atom                                       (51)
	LabelExp -> VAR                                    (52)
	LabelExp -> '(' LabelExp ')'                       (53)
	LabelExp -> LabelExp '&' LabelExp                  (54)
	LabelExp -> LabelExp '|' LabelExp                  (55)
	ConfLabelExp ->                                    (56)
	ConfLabelExp -> '#root-confidentiality'            (57)
	ConfLabelExp -> '#null-confidentiality'            (58)
	ConfLabelExp -> LabelExp                           (59)
	IntLabelExp ->                                     (60)
	IntLabelExp -> '#root-integrity'                   (61)
	IntLabelExp -> '#null-integrity'                   (62)
	IntLabelExp -> LabelExp                            (63)
	DCLabelExp -> ConfLabelExp ';' IntLabelExp         (64)
	Lit -> NUM                                         (65)
	Lit -> STRING                                      (66)
	Lit -> true                                        (67)
	Lit -> false                                       (68)
	Lit -> LABEL                                       (69)
	Lit -> '`<' DCLabelExp '>`'                        (70)
	Atom -> '(' Expr ')'                               (71)
	Atom -> Lit                                        (72)
	Atom -> VAR                                        (73)
	Atom -> '(' ')'                                    (74)
	Atom -> '(' CSExpr Expr ')'                        (75)
	Atom -> '{' '}'                                    (76)
	Atom -> RecordExpr                                 (77)
	Atom -> ListExpr                                   (78)
	Atom -> Atom '.' VAR                               (79)
	Atom -> Atom '.' NUM                               (80)
	RecordExpr -> '{' RecordFields '}'                 (81)
	RecordExpr -> '{' Atom with RecordFields '}'       (82)
	RecordFields -> Field                              (83)
	RecordFields -> Field ',' RecordFields             (84)
	Field -> VAR                                       (85)
	Field -> VAR '=' Expr                              (86)
	ListExpr -> '[' ']'                                (87)
	ListExpr -> '[' Expr ']'                           (88)
	ListExpr -> '[' CSExpr Expr ']'                    (89)
	CSExpr -> Expr ','                                 (90)
	CSExpr -> CSExpr Expr ','                          (91)
	Pattern -> VAR                                     (92)
	Pattern -> '(' Pattern ')'                         (93)
	Pattern -> Pattern '@' LABEL                       (94)
	Pattern -> '(' ')'                                 (95)
	Pattern -> '_'                                     (96)
	Pattern -> Lit                                     (97)
	Pattern -> '(' CSPattern Pattern ')'               (98)
	Pattern -> FieldPattern                            (99)
	Pattern -> ListPattern                             (100)
	FieldPattern -> '{' '}'                            (101)
	FieldPattern -> '{' '..' '}'                       (102)
	FieldPattern -> '{' FieldPat '}'                   (103)
	FieldPattern -> '{' FieldPat ',' '..' '}'          (104)
	FieldPattern -> '{' FieldPatterns FieldPat '}'     (105)
	FieldPattern -> '{' FieldPatterns FieldPat ',' '..' '}'   (106)
	FieldPatterns -> FieldPat ','                      (107)
	FieldPatterns -> FieldPatterns FieldPat ','        (108)
	FieldPat -> VAR                                    (109)
	FieldPat -> VAR '=' Pattern                        (110)
	ListPattern -> '[' ']'                             (111)
	ListPattern -> '[' Pattern ']'                     (112)
	ListPattern -> '[' CSPattern Pattern ']'           (113)
	ListPattern -> Pattern '::' Pattern                (114)
	CSPattern -> Pattern ','                           (115)
	CSPattern -> CSPattern Pattern ','                 (116)
	Dec -> val Pattern '=' Expr                        (117)
	Dec -> FunDecs                                     (118)
	Decs -> Dec                                        (119)
	Decs -> Dec Decs                                   (120)
	FunDecs -> FunDecl                                 (121)
	FunDecs -> FunDecl AndFunDecs                      (122)
	AndFunDecs -> AndFunDecl                           (123)
	AndFunDecs -> AndFunDecl AndFunDecs                (124)
	FunOptions -> FirstFunOption                       (125)
	FunOptions -> FirstFunOption OtherFunOptions       (126)
	OtherFunOptions -> OtherFunOption                  (127)
	OtherFunOptions -> OtherFunOption OtherFunOptions   (128)
	FirstFunOption -> FunArgs '=' Expr                 (129)
	OtherFunOption -> '|' VAR FunArgs '=' Expr         (130)
	FunDecl -> fun VAR FunOptions                      (131)
	AndFunDecl -> and VAR FunOptions                   (132)
	FunArgs -> Pattern                                 (133)
	FunArgs -> Pattern FunArgs                         (134)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	let            { L _ TokenLet }
	in             { L _ TokenIn }
	end            { L _ TokenEnd }
	val            { L _ TokenVal }
	fun            { L _ TokenFun }
	and            { L _ TokenAnd }
	if             { L _ TokenIf }
	then           { L _ TokenThen }
	else           { L _ TokenElse }
	case           { L _ TokenCase }
	of             { L _ TokenOf }
	import         { L _ TokenImport }
	datatype       { L _ TokenDatatype }
	Atoms          { L _ TokenAtoms }
	fn             { L _ TokenFn }
	hn             { L _ TokenHn }
	pini           { L _ TokenPini }
	when           { L _ TokenWhen }
	with           { L _ TokenWith }
	qualified      { L _ TokenQualified }
	true           { L _ TokenTrue }
	false          { L _ TokenFalse }
	andalso        { L _ TokenAndAlso }
	orelse         { L _ TokenOrElse }
	NUM            { L _ (TokenNum _) }
	STRING         { L _ (TokenString _) }
	VAR            { L _  (TokenSym _) }
	LABEL          { L _  (TokenLabel _) }
	'@'            { L _  TokenAt }
	'=>'           { L _ TokenArrow }
	'='            { L _ TokenEq }
	'+'            { L _ TokenAdd }
	'-'            { L _ TokenSub }
	'*'            { L _ TokenMul }
	'/'            { L _ TokenDiv }
	';'            { L _ TokenSemi }
	'^'            { L _ TokenCaret }
	'<='           { L _ TokenLe }
	'>='           { L _ TokenGe }
	'<'            { L _ TokenLt }
	'>'            { L _ TokenGt }
	'<>'           { L _ TokenNe }
	div            { L _ TokenIntDiv }
	mod            { L _ TokenMod }
	andb           { L _ TokenBinAnd }
	orb            { L _ TokenBinOr }
	xorb           { L _ TokenBinXor }
	'<<'           { L _ TokenBinShiftLeft }
	'>>'           { L _ TokenBinShiftRight }
	'~>>'          { L _ TokenBinZeroShiftRight }
	'`<'           { L _ TokenDCLabelLeft }
	'>`'           { L _ TokenDCLabelRight }
	'&'            { L _ TokenAmpersand }
	'#root-confidentiality'{ L _ TokenDCRootConf }
	'#null-confidentiality'{ L _ TokenDCNullConf }
	'#root-integrity'{ L _ TokenDCRootInteg }
	'#null-integrity'{ L _ TokenDCNullInteg }
	'raisedTo'     { L _ TokenRaisedTo }
	'isTuple'      { L _ TokenIsTuple }
	'isList'       { L _ TokenIsList }
	'isRecord'     { L _ TokenIsRecord }
	'('            { L _ TokenLParen }
	')'            { L _ TokenRParen }
	','            { L _ TokenComma }
	'_'            { L _ TokenWildcard }
	'|'            { L _ TokenBar }
	'::'           { L _ TokenColonColon }
	'['            { L _ TokenLBracket }
	']'            { L _ TokenRBracket }
	'.'            { L _ TokenDot }
	'..'           { L _ TokenDotDot }
	'{'            { L _ TokenLBrace }
	'}'            { L _ TokenRBrace }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_prog     rule  0
	Prog            rule  1
	ImportDecl      rules 2, 3, 4
	AtomsDecl       rules 5, 6
	AtomsList       rules 7, 8
	Expr            rules 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45
	Match           rules 46, 47
	Form            rules 48, 49
	Fact            rules 50, 51
	LabelExp        rules 52, 53, 54, 55
	ConfLabelExp    rules 56, 57, 58, 59
	IntLabelExp     rules 60, 61, 62, 63
	DCLabelExp      rule  64
	Lit             rules 65, 66, 67, 68, 69, 70
	Atom            rules 71, 72, 73, 74, 75, 76, 77, 78, 79, 80
	RecordExpr      rules 81, 82
	RecordFields    rules 83, 84
	Field           rules 85, 86
	ListExpr        rules 87, 88, 89
	CSExpr          rules 90, 91
	Pattern         rules 92, 93, 94, 95, 96, 97, 98, 99, 100
	FieldPattern    rules 101, 102, 103, 104, 105, 106
	FieldPatterns   rules 107, 108
	FieldPat        rules 109, 110
	ListPattern     rules 111, 112, 113, 114
	CSPattern       rules 115, 116
	Dec             rules 117, 118
	Decs            rules 119, 120
	FunDecs         rules 121, 122
	AndFunDecs      rules 123, 124
	FunOptions      rules 125, 126
	OtherFunOptions rules 127, 128
	FirstFunOption  rule  129
	OtherFunOption  rule  130
	FunDecl         rule  131
	AndFunDecl      rule  132
	FunArgs         rules 133, 134

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_prog -> . Prog                               (rule 0)

	let            reduce using rule 4
	if             reduce using rule 4
	case           reduce using rule 4
	import         shift, and enter state 3
	datatype       reduce using rule 4
	fn             reduce using rule 4
	hn             reduce using rule 4
	true           reduce using rule 4
	false          reduce using rule 4
	NUM            reduce using rule 4
	STRING         reduce using rule 4
	VAR            reduce using rule 4
	LABEL          reduce using rule 4
	'-'            reduce using rule 4
	'`<'           reduce using rule 4
	'isTuple'      reduce using rule 4
	'isList'       reduce using rule 4
	'isRecord'     reduce using rule 4
	'('            reduce using rule 4
	'['            reduce using rule 4
	'{'            reduce using rule 4

	Prog           goto state 4
	ImportDecl     goto state 2

State 1

	Prog -> . ImportDecl AtomsDecl Expr                 (rule 1)

	import         shift, and enter state 3

	ImportDecl     goto state 2

State 2

	Prog -> ImportDecl . AtomsDecl Expr                 (rule 1)

	let            reduce using rule 6
	if             reduce using rule 6
	case           reduce using rule 6
	datatype       shift, and enter state 8
	fn             reduce using rule 6
	hn             reduce using rule 6
	true           reduce using rule 6
	false          reduce using rule 6
	NUM            reduce using rule 6
	STRING         reduce using rule 6
	VAR            reduce using rule 6
	LABEL          reduce using rule 6
	'-'            reduce using rule 6
	'`<'           reduce using rule 6
	'isTuple'      reduce using rule 6
	'isList'       reduce using rule 6
	'isRecord'     reduce using rule 6
	'('            reduce using rule 6
	'['            reduce using rule 6
	'{'            reduce using rule 6

	AtomsDecl      goto state 7

State 3

	ImportDecl -> import . VAR ImportDecl               (rule 2)
	ImportDecl -> import . qualified VAR ImportDecl     (rule 3)

	qualified      shift, and enter state 5
	VAR            shift, and enter state 6


State 4

	%start_prog -> Prog .                               (rule 0)

	%eof           accept


State 5

	ImportDecl -> import qualified . VAR ImportDecl     (rule 3)

	VAR            shift, and enter state 37


State 6

	ImportDecl -> import VAR . ImportDecl               (rule 2)

	let            reduce using rule 4
	if             reduce using rule 4
	case           reduce using rule 4
	import         shift, and enter state 3
	datatype       reduce using rule 4
	fn             reduce using rule 4
	hn             reduce using rule 4
	true           reduce using rule 4
	false          reduce using rule 4
	NUM            reduce using rule 4
	STRING         reduce using rule 4
	VAR            reduce using rule 4
	LABEL          reduce using rule 4
	'-'            reduce using rule 4
	'`<'           reduce using rule 4
	'isTuple'      reduce using rule 4
	'isList'       reduce using rule 4
	'isRecord'     reduce using rule 4
	'('            reduce using rule 4
	'['            reduce using rule 4
	'{'            reduce using rule 4

	ImportDecl     goto state 36

State 7

	Prog -> ImportDecl AtomsDecl . Expr                 (rule 1)

	let            shift, and enter state 17
	if             shift, and enter state 18
	case           shift, and enter state 19
	fn             shift, and enter state 20
	hn             shift, and enter state 21
	true           shift, and enter state 22
	false          shift, and enter state 23
	NUM            shift, and enter state 24
	STRING         shift, and enter state 25
	VAR            shift, and enter state 26
	LABEL          shift, and enter state 27
	'-'            shift, and enter state 28
	'`<'           shift, and enter state 29
	'isTuple'      shift, and enter state 30
	'isList'       shift, and enter state 31
	'isRecord'     shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34
	'{'            shift, and enter state 35

	Expr           goto state 10
	Form           goto state 11
	Fact           goto state 12
	Lit            goto state 13
	Atom           goto state 14
	RecordExpr     goto state 15
	ListExpr       goto state 16

State 8

	AtomsDecl -> datatype . Atoms '=' VAR AtomsList     (rule 5)

	Atoms          shift, and enter state 9


State 9

	AtomsDecl -> datatype Atoms . '=' VAR AtomsList     (rule 5)

	'='            shift, and enter state 106


State 10

	Prog -> ImportDecl AtomsDecl Expr .                 (rule 1)
	Expr -> Expr . ';' Expr                             (rule 19)
	Expr -> Expr . '-' Expr                             (rule 20)
	Expr -> Expr . '+' Expr                             (rule 21)
	Expr -> Expr . '>=' Expr                            (rule 22)
	Expr -> Expr . '*' Expr                             (rule 23)
	Expr -> Expr . '/' Expr                             (rule 24)
	Expr -> Expr . div Expr                             (rule 25)
	Expr -> Expr . mod Expr                             (rule 26)
	Expr -> Expr . '^' Expr                             (rule 27)
	Expr -> Expr . '=' Expr                             (rule 28)
	Expr -> Expr . '<=' Expr                            (rule 29)
	Expr -> Expr . '<' Expr                             (rule 30)
	Expr -> Expr . '>' Expr                             (rule 31)
	Expr -> Expr . '<>' Expr                            (rule 32)
	Expr -> Expr . andalso Expr                         (rule 33)
	Expr -> Expr . orelse Expr                          (rule 34)
	Expr -> Expr . andb Expr                            (rule 35)
	Expr -> Expr . orb Expr                             (rule 36)
	Expr -> Expr . xorb Expr                            (rule 37)
	Expr -> Expr . '<<' Expr                            (rule 38)
	Expr -> Expr . '>>' Expr                            (rule 39)
	Expr -> Expr . '~>>' Expr                           (rule 40)
	Expr -> Expr . '::' Expr                            (rule 41)
	Expr -> Expr . 'raisedTo' Expr                      (rule 42)

	andalso        shift, and enter state 82
	orelse         shift, and enter state 83
	'='            shift, and enter state 84
	'+'            shift, and enter state 85
	'-'            shift, and enter state 86
	'*'            shift, and enter state 87
	'/'            shift, and enter state 88
	';'            shift, and enter state 89
	'^'            shift, and enter state 90
	'<='           shift, and enter state 91
	'>='           shift, and enter state 92
	'<'            shift, and enter state 93
	'>'            shift, and enter state 94
	'<>'           shift, and enter state 95
	div            shift, and enter state 96
	mod            shift, and enter state 97
	andb           shift, and enter state 98
	orb            shift, and enter state 99
	xorb           shift, and enter state 100
	'<<'           shift, and enter state 101
	'>>'           shift, and enter state 102
	'~>>'          shift, and enter state 103
	'raisedTo'     shift, and enter state 104
	'::'           shift, and enter state 105
	%eof           reduce using rule 1


State 11

	Expr -> Form .                                      (rule 9)
